ajustando template padrao.

--- a/project/core/templates/core/base/menu.html
+++ b/project/core/templates/core/base/menu.html
@@ -12,20 +12,14 @@
 					</a>
 					</li>
 										
-					{% if perms.controle_usuario %}
-					<li><a href="#">Usuário</a>
-					<ul>
 					{% if perms.usuario_consulta %}
-					<li><a href="/usuario/consulta/">Controle</a></li>
+					<li><a href="/usuario/consulta/">Usuário</a></li>
 					{% endif %}
 					{% if perms.grupo_consulta %}
 					<li><a href="/grupo/consulta/">Grupo</a></li>
 					{% endif %}
 					{% if perms.permissao_consulta %}
 					<li><a href="/permissao/consulta/">Permissão</a></li>
-					{% endif %}
-					</ul>
-					</li>
 					{% endif %}
 					
 					</ul>
