--- a/project/core/templates/core/base/index.html
+++ b/project/core/templates/core/base/index.html
@@ -1,54 +1,62 @@
 {% load static %}
-<!doctype html>
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-		
-		<title> {% block subtitulo %} {% endblock %} : NOME DO PROJETO </title>
-		<link rel="icon" type="image/jpg" href="{{STATIC_URL}}img/favicon.jpg" />
-      
-		<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/styles.css" />
-		<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/jquery-ui.css" />
-		
-		<script src="{{STATIC_URL}}js/jquery-1.9.1.js"></script>
-		<script src="{{STATIC_URL}}js/jquery-ui.js"></script>
-		<script src="{{STATIC_URL}}js/jquery_maskedinput.js"></script>
-		<script src="{{STATIC_URL}}js/js.js"></script>
-		
-		<!--[if lt IE 9]>
-			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+<title>{% block subtitulo %} {% endblock %} : NOME DO PROJETO</title>
+	<meta name="description" content="">
+	<meta name="keywords" content="">
 	
-	</head>
-	
-	<body>
-		
-		<!--
-		<div id="barra-brasil" style="background:#7F7F7F; height: 20px; padding:0 0 0 10px;display:block;"> 
-			<ul id="menu-barra-temp" style="list-style:none;">
-				<li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED"><a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li> 
-				<li><a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
-			</ul>
-		</div>
-		-->
-			<div id="sitename">
-				<div class="width" style="height:120px">
+	<link rel="icon" type="image/jpg" href="{{STATIC_URL}}img/favicon.jpg" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+
+	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Ubuntu' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/normalize.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/basic-style.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/jquery-ui.css" />
+
+	<script src="{{STATIC_URL}}js/jquery-1.9.1.js"></script>
+	<script src="{{STATIC_URL}}js/jquery-ui.js"></script>
+	<script src="{{STATIC_URL}}js/jquery_maskedinput.js"></script>
+	<script src="{{STATIC_URL}}js/js.js"></script>
+
+</head>
+
+<body id="home">
+  
+<!-- header area -->
+    <header class="wrapper clearfix">
+		       
+        <div id="banner">        
+        	<div id="logo">
+				<a href="basic.html">
+<!--					<img src="{{STATIC_URL}}img/basic-logo.svg" alt="nome do projeto"> -->
 					<h1 style="margin-top:15px"><a href="/"> NOME DO PROJETO </a></h1>
-	
-					<nav>
+				</a>
+			</div> 
+        </div>
+        
+        <!-- main navigation -->
+        <nav id="topnav" role="navigation">
 						{% if user.is_active %}
-							<div style="color:white;font-weight:bold;font-size:12px;text-align:right">
+							<div style="font-size:12px;text-align:center">
 								Usuário:
-								<a href="/sicop/usuario/edicao/usuario/{{user.id}}/">
+								<a href="usuario/edicao/{{user.id}}/">
 								{% filter force_escape %} {% firstof user.short_name user.username %} {% endfilter %}
 								</a>
-								<br/>
+								&nbsp;|&nbsp;
 								<a href="/logout/">Sair do Sistema</a>
 							</div>
 						{% else %}
 						
-							<div style="text-align:left;margin-top:-20px">
+							<div style="font-size:12px">
 								<form action="/login/" method="post">
 									{% csrf_token %}
 									<input placeholder="Usuário" id="id_username" size="20" maxlength="254" name="username" type="text" />
@@ -59,61 +67,55 @@
 								</form>
 							</div>
 						{% endif %}					
-					</nav>
-		
-					<div class="clear"></div>
-				</div>
-			</div>
-			<section id="body" class="width clear">
-				<div style="background:#eee;width:100%;font-size:14px">
-					<div class="article-info" style="margin:10px">
-					<table border="0">
-						<tr>
-						<td>
-						Você está aqui: {% block breadcumbs %} {% endblock %}
-						</td>
-					
-					</table>
-					</div>
+		</nav><!-- #topnav -->
+  
+    </header><!-- end header -->
+ 
+ 
+<section id="page-header" class="clearfix">    
+<!-- responsive FlexSlider image slideshow -->
+<div class="wrapper">
+	<h2>Você está aqui: {% block breadcumbs %} {% endblock %}</h2>
+    </div>
 
-				</div>
-		
-				<aside id="sidebar" class="column-left">
-					
-					{% include "core/base/menu.html" %}
-					
-				</aside>
-				<section id="content" class="column-right">
-	                		
-		    <article style="margin-top: -10px;z-index:1;position:relative;">
-				<div style="width:100%;height:100%;z-index:-1" ></div>			
-				{% block index %} {% endblock %}
-			
-			</article>
-		
-			</section>
-	
-		</section>
-		
-			<footer class="clear">
-				<div  class="width">
-					<p class="left">
-						<img width="24px" src="{{STATIC_URL}}img/nome-projeto.png" title="projeto" alt="projeto" />	
-						<br/>
-						&copy; ANO - NOME DO PROJETO - Revisão X
-					</p>
-						<p class="right">
-							<img width="24px" src="{{STATIC_URL}}img/python.png" title="Python 2.7.6" alt="Python 2.7.6" />	
-							<img width="24px" src="{{STATIC_URL}}img/django.png" title="Django 1.5.1" alt="Django 1.5.1" />	
-							<img width="24px" src="{{STATIC_URL}}img/postgresql.png" title="PostgreSQL 9.2" alt="PostgreSQL 9.2" />	
-							<br/>
-							Desenvolvido em Software Livre
-						</p>
-				</div>
-			</footer>
-		
-		{% block body_scripts %} {% endblock body_scripts %}
-		
-	</body>
-	
+</section>
+
+
+<!-- main content area -->   
+<div class="wrapper" id="main"> 
+    
+     
+      
+    <!-- sidebar -->    
+    <aside>
+            <nav id="secondary-navigation">
+				{% include "core/base/menu.html" %}
+             </nav>
+      </aside><!-- #end sidebar -->
+   
+<!-- content area -->    
+	<section id="content">   
+		{% block index %} {% endblock %}                
+	</section><!-- #end content area -->
+
+
+  </div><!-- #end div #main .wrapper -->
+    
+
+
+<!-- footer area -->    
+<footer>
+	<div id="colophon" class="wrapper clearfix">
+    	&copy; ANO - NOME DO PROJETO - Revisão X
+    </div>
+    
+	<div id="attribution" class="wrapper clearfix" style="color:#666; font-size:11px;">Desenvolvido em Software Livre</div>
+    
+</footer><!-- #end footer area --> 
+
+
+<!-- jQuery -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+
+</body>
 </html>
