ajustando layout padrao css.

--- a/project/core/templates/core/base/index.html
+++ b/project/core/templates/core/base/index.html
@@ -23,7 +23,6 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/jquery-ui.css" />
 
 	<script src="{{STATIC_URL}}js/jquery-1.9.1.js"></script>
-	<script src="{{STATIC_URL}}js/jquery-ui.js"></script>
 	<script src="{{STATIC_URL}}js/jquery_maskedinput.js"></script>
 	<script src="{{STATIC_URL}}js/js.js"></script>
 
@@ -63,7 +62,7 @@
 									<br />
 									<input style="margin-top:5px" placeholder="Senha" id="id_password" size="12" name="password" type="password" />
 									<br/>
-									<button class="button_yellow" style="margin-top:5px" type="submit">ENTRAR</button>
+									<button class="button_green" style="margin-top:5px" type="submit">ENTRAR</button>
 								</form>
 							</div>
 						{% endif %}					
