--- a/project/core/templates/core/base/index.html
+++ b/project/core/templates/core/base/index.html
@@ -36,7 +36,7 @@
         <div id="banner">        
         	<div id="logo">
 				<a href="basic.html">
-<!--					<img src="{{STATIC_URL}}img/basic-logo.svg" alt="nome do projeto"> -->
+<!--					<img src="{{STATIC_URL}}img/logo.png" alt="nome do projeto"> -->
 					<h1 style="margin-top:15px"><a href="/"> NOME DO PROJETO </a></h1>
 				</a>
 			</div> 
@@ -72,10 +72,10 @@
  
  
 <section id="page-header" class="clearfix">    
-<!-- responsive FlexSlider image slideshow -->
-<div class="wrapper">
-	<h2>Você está aqui: {% block breadcumbs %} {% endblock %}</h2>
-    </div>
+
+	<div class="wrapper">
+		<h3>Você está aqui: {% block breadcumbs %} {% endblock %}</h3>
+	</div>
 
 </section>
 
