--- a/project/core/templates/core/excecao/erro_servidor.html
+++ b/project/core/templates/core/excecao/erro_servidor.html
@@ -4,23 +4,15 @@
 	Erro no Sistema
 {% endblock %}
 
+{% block subtitulo %}
+	
+	OCORREU UM ERRO NO SISTEMA
+	
+{% endblock %}
+
 {% block index %}
 
-<!--========================================================================== Content Part 1 =====================================================================================-->
-
-<div class="wrapper">
-
-	<div>
-
-		<!--end of grid-10-->
-		Ocorreu um erro no sistema:<br/>
 		Tipo: {{ type }}<br />
 		Valor: {{ value }}
-	</div>
-	<!--end of grids-->
-
-</div>
-<!--end of wrapper-->
-
 
 {% endblock %}
