--- a/project/core/templates/core/excecao/permissao_negada.html
+++ b/project/core/templates/core/excecao/permissao_negada.html
@@ -4,21 +4,14 @@
 	Acesso Negado
 {% endblock %}
 
-{% block conteudo %}
+{% block subtitulo %}
+	
+	SEM PERMISSÃO DE ACESSO
+	
+{% endblock %}
 
-<!--========================================================================== Content Part 1 =====================================================================================-->
+{% block index %}
 
-<div class="wrapper">
-
-	<div class="grids">
-
-		<!--end of grid-10-->
 		Você não tem permissão para acessar a funcionalidade requerida !
-	</div>
-	<!--end of grids-->
-
-</div>
-<!--end of wrapper-->
-
 
 {% endblock %}
