--- a/project/core/templates/core/admin/grupo/cadastro.html
+++ b/project/core/templates/core/admin/grupo/cadastro.html
@@ -5,12 +5,14 @@
 	Acesso Restrito | Grupo | Cadastro
 {% endblock %}
 
+{% block subtitulo %}
+	
+	CADASTRAR GRUPO
+	
+{% endblock %}
+
+
 {% block formulario %}
-<div id="tabs" style="color:black;width:100%;font-size:11px">
-<ul>
-	<li><a href="#tabs-1">CADASTRAR GRUPO</a></li>
-</ul>
-<div>		
 
 	<form method="post" action=".">
 		{% csrf_token %}
@@ -29,6 +31,5 @@
 			</tr>
 		</table>
 	</form>
-</div>
-</div>
+
 {% endblock %}
