--- a/project/core/templates/core/base/cadastro.html
+++ b/project/core/templates/core/base/cadastro.html
@@ -26,10 +26,10 @@
 			    		class="{{ message.tags }}"{% endif %}> {{ message }}</li>
 			    {% endfor %}
 			</ul>
-			<div style="text-align:center"> <a onclick="$('#dialog-modal').dialog('close')" class="button_green">OK</a> </div>
 		</div>
 	{% endif %}
 
 {% endblock %}
+		<h2>{% block subtitulo %} {% endblock %}</h2>
 		{% block formulario %} {% endblock %}
 {% endblock %}
