--- a/project/core/templates/core/base/consulta.html
+++ b/project/core/templates/core/base/consulta.html
@@ -26,26 +26,21 @@
 			    		class="{{ message.tags }}"{% endif %}> {{ message }}</li>
 			    {% endfor %}
 			</ul>
-			<div style="text-align:center"> <a onclick="$('#dialog-modal').dialog('close')" class="button_green">OK</a> </div>
 		</div>
 		{% endif %}
 	
 	{% endblock %}
 
 
-	<div id="tabs" style="color:black;width:100%;font-size:11px">
 		
-		 <ul>
-			<li><a href="#tabs-1">{% block subtitulo %} {% endblock %}</a></li>
-		</ul>
+		<h2>{% block subtitulo %} {% endblock %}</h2>
 		
-		<div id="tabs-1" style="text-align:center">
+		<div style="text-align:center">
 				<!-- 		FORMULARIOS DOS FILTROS / CONSULTAS -->
 				{% block consulta %} {% endblock %}
 			
 				<!-- 		RESULTADO DOS FILTROS / CONSULTAS		 -->
 				{% block resultado %} {% endblock %}		
 		</div>
-	</div>	
 	
 {% endblock %}
