--- a/project/core/templates/core/excecao/pagina_nao_encontrada.html
+++ b/project/core/templates/core/excecao/pagina_nao_encontrada.html
@@ -1,24 +1,18 @@
 {% extends "core/base/restrito.html" %} 
 
 {% block breadcumbs %}
-	Pagina Não Encontrada
+	Página Não Encontrada
 {% endblock %}
 
-{% block conteudo %}
+{% block subtitulo %}
+	
+	PÁGINA NÃO EXISTE
+	
+{% endblock %}
 
-<!--========================================================================== Content Part 1 =====================================================================================-->
+{% block index %}
 
-<div class="wrapper">
-
-	<div class="grids">
-
-		<!--end of grid-10-->
-		Pagina não existe !
-	</div>
-	<!--end of grids-->
-
-</div>
-<!--end of wrapper-->
-
+		Tipo: {{ type }}<br />
+		Valor: {{ value }}
 
 {% endblock %}
