--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -9,36 +9,28 @@
 
 <!--========================================================================== Content Part 1 =====================================================================================-->
 
-<div>
-
-		<div id="accordio" style="color:black;width:100%;font-size:11px">
-			<h3>
+			<h2>
 				{% block subtitulo %}
 					PÁGINA INICIAL
 				{% endblock %}
-			</h3>
+			</h2>
 		
 			<div>
 
 			{% if user.is_active %}
 
-				area do usuario logado
+				Área do usuário logado
 
 			{% else %}
 
-				nao logado
+				Não logado
 
 			{% endif %}				
 
 
 
 			</div>	
-				
-				
-		</div>
-
-</div>
-
+			
 
 {% endblock %}
 
