--- a/project/core/templates/core/admin/permissao/cadastro.html
+++ b/project/core/templates/core/admin/permissao/cadastro.html
@@ -2,7 +2,7 @@
 {% load static %} 
 
 {% block breadcumbs %}
-	Acesso Restrito | Permissao | Cadastro
+	Acesso Restrito | Permissão | Cadastro
 {% endblock %}
 
 {% block subtitulo %}
