--- a/project/core/templates/core/admin/permissao/consulta.html
+++ b/project/core/templates/core/admin/permissao/consulta.html
@@ -2,7 +2,7 @@
 {% load static %} 
 
 {% block breadcumbs %}
-	Acesso Restrito | Permissao
+	Acesso Restrito | Permissão
 {% endblock %}
 
 {% block subtitulo %}
@@ -56,7 +56,7 @@
 						</tr>
 					{% endfor %}
 				{% else %}
-					<tr> <td style="padding-top: 20px" colspan="6"> Nenhuma Permissao Encontrada </td> </tr>
+					<tr> <td style="padding-top: 20px" colspan="6"> Nenhuma Permissão Encontrada </td> </tr>
 				{% endif %}
 			</tbody>
 		</table>
