--- a/project/core/templates/core/admin/permissao/edicao.html
+++ b/project/core/templates/core/admin/permissao/edicao.html
@@ -1,7 +1,7 @@
 {% extends "core/base/cadastro.html" %} 
 {% load static %} 
 {% block breadcumbs %}
-	Acesso Restrito | Permissao | Edicao
+	Acesso Restrito | Permissão | Edição
 {% endblock %}
 
 {% block subtitulo %}
