--- a/project/core/templates/core/admin/usuario/edicao.html
+++ b/project/core/templates/core/admin/usuario/edicao.html
@@ -62,7 +62,7 @@
 						</tr>
 					{% endfor %}
 				{% else %}
-					<tr> <td style="padding-top: 20px" colspan="6"> Cadastre Grupos de Usuario </td> </tr>
+					<tr> <td style="padding-top: 20px" colspan="6"> Cadastre Grupos de Usuário </td> </tr>
 				{% endif %}
 			</tbody>
 		</table>
