--- a/project/core/templates/core/base/index.html
+++ b/project/core/templates/core/base/index.html
@@ -81,7 +81,7 @@
 
 
 <!-- main content area -->   
-<div class="wrapper" id="main"> 
+<div class="wrapper" id="main" style="margin-top:-20px"> 
     
      
       
