adicao da tabela auth_user_group.

--- a/project/core/templates/core/admin/usuario/edicao.html
+++ b/project/core/templates/core/admin/usuario/edicao.html
@@ -1,7 +1,7 @@
 {% extends "core/base/cadastro.html" %} 
 {% load static %} 
 {% block breadcumbs %}
-	Acesso Restrito | Usuario | Edicao
+	Acesso Restrito | Usuário | Edição
 {% endblock %}
 
 {% block subtitulo %}
