--- a/project/core/templates/core/admin/permissao/consulta.html
+++ b/project/core/templates/core/admin/permissao/consulta.html
@@ -46,13 +46,13 @@
 			<tbody>
 				<tr>
 						<td class="colunaTabelaConsulta" style="width:20%">Nome</td>
-						<td class="colunaTabelaConsulta" style="width:15%">Funcionalidade</td>
+						<td class="colunaTabelaConsulta" style="width:15%">Codenome</td>
 				</tr>
 				{% if lista %}
 					{% for obj in lista %}
 						<tr onclick="editarID('/permissao/edicao/{{ obj.id }}');">
 							<td class="colunaTabelaConsulta">{{ obj.name }}</td>
-							<td class="colunaTabelaConsulta">{{ obj.content_type.name }}</td>
+							<td class="colunaTabelaConsulta">{{ obj.codename }}</td>
 						</tr>
 					{% endfor %}
 				{% else %}
