--- a/project/core/templates/core/base/index.html
+++ b/project/core/templates/core/base/index.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	
-	<link rel="icon" type="image/jpg" href="{{STATIC_URL}}img/favicon.jpg" />
+	<link rel="icon" type="image/jpg" href="{{STATIC_URL}}img/favicon.png" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
