padronização dos templates do tema default.

--- a/project/core/templates/core/admin/permissao/edicao.html
+++ b/project/core/templates/core/admin/permissao/edicao.html
@@ -1,4 +1,4 @@
-{% extends "core/base/cadastro.html" %} 
+{% extends "core/base/pagina.html" %} 
 {% load static %} 
 {% block breadcumbs %}
 	Acesso Restrito | Permissão | Edição
