adicao da funcionalidade para exportar dados dos modulos atraves do relatorio_consulta_pdf_html utilizando a funcao gerar_pdf.

--- a/project/core/templates/core/admin/usuario/consulta.html
+++ b/project/core/templates/core/admin/usuario/consulta.html
@@ -39,7 +39,9 @@
 					</td>
 					<td class="colunaTabela" style="text-align:right"> 
 						<div> 
-							<a href="/usuario/relatorio/"> <img width="36" alt="ODS" src="{{STATIC_URL}}img/ods.png" /> </a>					
+							<a href="/usuario/relatorio/ods/"> <img width="36" alt="ODS" src="{{STATIC_URL}}img/ods.png" /></a>&nbsp;&nbsp;
+							<a href="/usuario/relatorio/pdf/" target="blank"> <img width="36" alt="PDF" src="{{STATIC_URL}}img/pdf.png" /></a>					
+
 					</td>
 				</tr>
 			</table>
