--- a/project/core/templates/core/admin/grupo/consulta.html
+++ b/project/core/templates/core/admin/grupo/consulta.html
@@ -5,13 +5,20 @@
 	Acesso Restrito | Grupo
 {% endblock %}
 
-{% block subtitulo %}
-	
-	CONSULTAR GRUPO
-	
+{% block title %}	
+	Consulta de grupo
 {% endblock %}
 
-{% block consulta %}
+{% block subtitle %}	
+	CONSULTAR GRUPO
+{% endblock %}
+
+{% block head %}	
+	<script src="//cdn.ckeditor.com/4.5.3/standard/ckeditor.js"></script>
+{% endblock %}
+
+
+{% block form %}
 	<form action="." method="post">
 			{% csrf_token %}
 			<table style="width:100%;text-align: left">
@@ -19,6 +26,15 @@
 				   <tr> 
 				   		<td class="colunaTabela"> <label>Nome:</label> </td><td> <input style="width:100%" name="name" /> </td>
 				   </tr>
+				   <tr>
+				   		<td colspan="2"> 
+				   			<textarea id="editor_grupo" name="descricao">
+				   			</textarea> 
+							<script>
+				                CKEDITOR.replace( 'editor_grupo' );
+				            </script>
+				   		</td>
+				   </tr>	
 				</tbody>
 			</table>
 			<br />
@@ -39,7 +55,7 @@
 {% endblock %}
 
 
-{% block resultado %}
+{% block result %}
 		<table class="csstable">
 			<tbody>
 				<tr>
